# data-analysis

./: .gitignore  DataAnalysis.code-workspace  README.md  convert_to_markdown.sh  environment.yml  maths_notes.md  oldRequirements.txt  paper_list.md  pyproject.toml  requirements-ci.txt  requirements.txt  sagemaker.md  snippets.md
neural_networks/mixture_of_experts/: .gitignore  README.md  prompts.md  pyproject.toml
neural_networks/mixture_of_experts/notebooks/: exploration.ipynb  exploration.md
neural_networks/mixture_of_experts/src/: data_sources.py  evaluate.py  models.py  torch_datasets.py  train.py  utils.py
neural_networks/movie_lens/rating_prediction/refactor/: README.md  pyproject.toml  requirements.txt  setup.py
neural_networks/movie_lens/rating_prediction/refactor/configs/: autoint.yaml  dcn.yaml  dcnv2.yaml  lightgcn.yaml  mult_vae.yaml  neumf.yaml  neural_colab_filter.yaml  nn_colab_filter.yaml  nn_colab_filter_no_bias.yaml  nn_colab_filter_non_linear.yaml  nn_colab_filter_sigmoid.yaml  nn_inner_product.yaml  test.yaml  wide_and_deep.yaml
neural_networks/movie_lens/rating_prediction/refactor/notebooks/: exploratory_data_analysis.ipynb  exploratory_data_analysis.md  temp.ipynb  temp.md
neural_networks/movie_lens/rating_prediction/refactor/src/: __init__.py  callbacks.py  data_preprocessing.py  dataloaders.py  evaluate.py  train.py  utilities.py  utils.py
neural_networks/sequence_data/: README.md  pyproject.toml
neural_networks/sequence_data/notebooks/: exploration.ipynb  exploration.md
neural_networks/sequence_data/src/: data_generator.py  dataset.py  models.py  train.py  utils.py
recommenders/recsys/: README.md  pyproject.toml
recommenders/recsys/configs/: autoint.yaml  autoint_baseline.yaml  autoint_categorical.yaml  autoint_continuous.yaml  dcn.yaml  factorization_machines.yaml  neural_inner_product.yaml  rq_vae.yaml  sasrec.yaml
recommenders/recsys/notebooks/: exploratory_data_analysis.ipynb  exploratory_data_analysis.md  sequential_exploratory_data_analysis.ipynb  sequential_exploratory_data_analysis.md
recommenders/recsys/src/recsys/: evaluate.py  movie_lens.py  train.py  train_sequential.py
recommenders/recsys/src/recsys/models/: __init__.py  autoint.py  dcnv2.py  factorization_machines.py  rq_vae.py  (+4 more)
(+470 files in other folders)
