[project]
name = "sequence_data"
version = "0.1.0"
description = "A project for sequence data analysis."
requires-python = ">=3.12"
dependencies = [
    "torch",
    "pytorch-lightning",
    "polars",
    "numpy",
    "ipykernel",
    "mlflow",
]

[tool.setuptools]
packages = ["src"]

[tool.uv]
package = true