[project]
name = "refactor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mlflow>=2.19.0",
    "polars>=1.22.0",
    "pytorch-lightning>=2.4.0",
    "torch>=2.5.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.4",
    "refactor",
]

[tool.uv]
package = true